# nested-dkg

./: Cargo.toml  README.md  addresses  addresses1  addresses2  addresses3  addresses4  addresses5  addresses6  addresses8  addresses9  bivariate_shares  hosts  keypairs  messages  read.py  univariate_shares
crates/bivariate-dkg/: Cargo.toml
crates/bivariate-dkg/src/: api.rs  dkg.rs  lib.rs  tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  utils.rs
crates/dfinity/bls12_381/: Cargo.toml
crates/dfinity/bls12_381/src/: api.rs  crypto.rs  types.rs
crates/dfinity/bls12_381/src/dkg/secp256k1/: complaint.rs  dealing.rs  ephemeral_key.rs  mod.rs  response.rs  transcript.rs
crates/dfinity/bls12_381/src/dkg/secp256k1/types/: ops.rs
crates/dfinity/bls12_381/src/ni_dkg/groth20_bls12_381/: dealing.rs  encryption.rs  mod.rs  transcript.rs
crates/dfinity/bls12_381/src/ni_dkg/groth20_bls12_381/encryption/: conversions.rs
crates/dfinity/bls12_381/src/types/: bivariate.rs  polynomial.rs
crates/dfinity/bls12_381/src/types/public_coefficients/: conversions.rs
crates/dfinity/fs_ni_dkg/: Cargo.toml
crates/dfinity/fs_ni_dkg/src/: el_gamal.rs  forward_secure.rs  lib.rs  nizk_chunking.rs  nizk_sharing.rs
crates/main/: Cargo.toml
crates/main/src/: lib.rs  main.rs
crates/networking/src/: node.rs
crates/nidkg/: Cargo.toml
crates/nidkg/src/: lib.rs
crates/optimized-dkg/: Cargo.toml
crates/optimized-dkg/src/: lib.rs
crates/optimized-nidkg/: Cargo.toml
crates/optimized-nidkg/src/: lib.rs
crates/optimized-univar/: Cargo.toml
crates/optimized-univar/src/: lib.rs
crates/types/src/: args.rs  bivariate.rs  id.rs  univariate.rs
crates/univariate-dkg/: Cargo.toml
crates/univariate-dkg/src/: api.rs  dkg.rs  tests.rs
results/: bivariate_dkg_11,11_5,8  bivariate_threshold_signatures_11,11_5,8  nidkg_121_40  nidkg_dealer_121_40  optimized_nidkg_11,11_5,8  optimized_nidkg_121_40  optimized_nidkg_dealer_11,11_5,8  optimized_nidkg_dealer_121_40  prf_signatures_10  prf_signatures_aggregator_10  univariate_dkg_121_40  univariate_threshold_signatures_10_3  univariate_threshold_signatures_11_5  univariate_threshold_signatures_121_40
scripts/: aws_bivariate_dkg.sh  aws_bivariate_threshold_signatures.sh  aws_nidkg.sh  aws_univariate_dkg.sh  aws_univariate_threshold_signatures.1.sh  aws_univariate_threshold_signatures.2.sh  aws_univariate_threshold_signatures.3.sh  aws_univariate_threshold_signatures.4.sh  aws_univariate_threshold_signatures.5.sh  aws_univariate_threshold_signatures.6.sh  aws_univariate_threshold_signatures.7.sh  aws_univariate_threshold_signatures.9.sh  aws_univariate_threshold_signatures.sh  local_bivariate_dkg.sh  local_bivariate_threshold_signatures.sh  local_nidkg.sh  local_optimized_bivariate_nidkg.sh  local_optimized_nidkg.sh  local_univariate_dkg.sh  local_univariate_threshold_signatures.sh  scp_files.sh
