[package]
name = "ic-crypto-internal-threshold-sig-bls12381"
version = "0.8.0"
edition = "2018"

[dependencies]
arrayvec = "0.5.1"
base64 = "0.11.0"
ic-crypto-internal-bls12381-common = { git = "https://github.com/dfinity/ic.git" }
ic-crypto-internal-bls12381-serde-miracl = { git = "https://github.com/dfinity/ic.git" }
ic-crypto-internal-fs-ni-dkg = { path = "../fs_ni_dkg" }
ic-crypto-internal-types = { git = "https://github.com/dfinity/ic.git" }
ic-crypto-sha = { git = "https://github.com/dfinity/ic.git" }
ic-types = { git = "https://github.com/dfinity/ic.git" }
lazy_static = "1.4.0"
libsecp256k1 = "0.5.0"
miracl_core = { version = "4.1.0", package = "miracl_core_bls12381" }
ff = { version = "0.10.0", default-features = false, features = ["std"] }
pairing = "0.20"
bls12_381 = { version = "0.5.0", default-features = false, features = ["groups", "pairings", "alloc", "experimental"] }
rand = "0.7.3"
rand_chacha = "0.2.2"
rand_core = "0.5.1"
serde = { version = "1.0.99", features = [ "derive" ] }
serde_bytes = "0.11"
serde_cbor = "0.11.1"
serde_json = "1.0.40"
simple_asn1 = "0.5.4"
strum_macros = "0.23.0"
zeroize = { version = "1.4.3", features = ["zeroize_derive"] }
types = { path = "../../types" }
bivariate-dkg = { path = "../../bivariate-dkg" }

[dev-dependencies]
hex = "0.4.2"
ic-crypto-internal-csp-test-utils = { git = "https://github.com/dfinity/ic.git" }
ic-crypto-internal-test-vectors = { git = "https://github.com/dfinity/ic.git" }
ic-crypto-test-utils = { git = "https://github.com/dfinity/ic.git" }
ic-types-test-utils = { git = "https://github.com/dfinity/ic.git" }
proptest = "0.9.4"
proptest-derive = "0.1.0"
