[package]
name = "ic-crypto-internal-fs-ni-dkg"
version = "0.8.0"
edition = "2018"

[dependencies]
hex = "0.4.2"
lazy_static = "1.4.0"
miracl_core = { version = "4.1.0", package = "miracl_core_bls12381" }
rand_chacha = "0.2.2"
zeroize = "1.1.1"
ic-crypto-internal-bls12381-common ={ git="https://github.com/dfinity/ic.git" }
ic-crypto-internal-bls12381-serde-miracl = { git="https://github.com/dfinity/ic.git" }
ic-crypto-internal-types = { git="https://github.com/dfinity/ic.git" }
ic-crypto-sha = { git="https://github.com/dfinity/ic.git" }
ic-types = { git = "https://github.com/dfinity/ic.git" }

[dev-dependencies]
proptest = "0.9.4"
rand = "0.7.3"
